Switch testing to tape to remove security vulnerability

--- a/package.json
+++ b/package.json
@@ -4,13 +4,12 @@
   "description": "Convert party abbreviations to full names and back again.",
   "main": "build/party-time.js",
   "scripts": {
-    "test": "mocha --reporter spec",
-    "cover": "node_modules/istanbul/lib/cli.js cover node_modules/mocha/bin/_mocha -- -R spec test/*",
-    "minify": "uglifyjs build/party-time.js --preamble \"$(preamble)\" -c -m -o build/party-time.min.js",
+    "pretest": "rm -rf build && mkdir build && rollup -c --banner \"$(preamble)\"",
+    "test": "tape 'test/test.js' && eslint index.js src",
+    "prepublish": "npm run sort && npm run dox && npm run test && uglifyjs build/party-time.js -c -m -o build/party-time.min.js",
+    "postpublish": "zip -j build/party-time.zip -- LICENSE README.md build/party-time.js build/party-time.min.js",
     "dox": "documentation build build/party-time.js -g -f md > API.md",
-    "rollup": "npm run sort && rm -rf build && mkdir build && rollup -c --banner \"$(preamble)\"",
-    "sort": "node sort",
-    "build": "npm run rollup && npm run minify && npm run dox"
+    "sort": "node scripts/sort"
   },
   "repository": {
     "type": "git",
@@ -36,15 +35,13 @@
   },
   "dependencies": {},
   "devDependencies": {
-    "chai": "^4.0.2",
-    "coveralls": "^2.13.1",
     "documentation": "^5.2.1",
+    "eslint": "^5.13.0",
     "indian-ocean": "^3.0.2",
-    "istanbul": "^0.4.5",
     "jeezy": "^1.12.14",
-    "mocha": "^3.4.2",
     "package-preamble": "^0.1.0",
     "rollup": "^0.50.0",
-    "rollup-plugin-json": "^2.3.0"
+    "rollup-plugin-json": "^2.3.0",
+    "tape": "^4.10.0"
   }
 }
